--- a/project/package.json
+++ b/project/package.json
@@ -6,15 +6,27 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node bin/www",
-    "nodemon": "nodemon bin/www"
+    "nodemon": "nodemon bin/www",
+    "webpack": "webpack",
+    "webpack-watch": "webpack --watch"
   },
   "author": "Pedro Marques",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^4.0.0",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "lodash": "^4.17.4",
+    "preact": "^8.1.0",
+    "pug": "^2.0.0-rc.2",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "nodemon": "^1.11.0",
+    "webpack": "^3.1.0"
   }
 }
