--- a/project/package.json
+++ b/project/package.json
@@ -13,20 +13,31 @@
   "author": "Pedro Marques",
   "license": "ISC",
   "dependencies": {
+    "antd": "^2.12.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "lodash": "^4.17.4",
     "preact": "^8.1.0",
+    "preact-compat": "^3.16.0",
     "pug": "^2.0.0-rc.2",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "winston": "^2.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-import": "^1.2.1",
+    "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.4",
     "nodemon": "^1.11.0",
+    "style-loader": "^0.18.2",
     "webpack": "^3.1.0"
   }
 }
