--- a/project/package.json
+++ b/project/package.json
@@ -17,9 +17,10 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "lodash": "^4.17.4",
-    "preact": "^8.1.0",
     "preact-compat": "^3.16.0",
     "pug": "^2.0.0-rc.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
